Use literals for datetime

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -16,6 +16,7 @@
         "Workflow Schedule@1.0.0-1": "04t37000000EYW0AAO",
         "Workflow Schedule@1.0.0-2": "04t37000000EYW5AAO",
         "Workflow Schedule@1.0.0-3": "04t37000000EYWAAA4",
-        "Workflow Schedule@1.1.0-1": "04t37000000EYWFAA4"
+        "Workflow Schedule@1.1.0-1": "04t37000000EYWFAA4",
+        "Workflow Schedule@1.2.0-1": "04t37000000EYaSAAW"
     }
 }
