--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -17,6 +17,8 @@
         "Workflow Schedule@1.0.0-2": "04t37000000EYW5AAO",
         "Workflow Schedule@1.0.0-3": "04t37000000EYWAAA4",
         "Workflow Schedule@1.1.0-1": "04t37000000EYWFAA4",
-        "Workflow Schedule@1.2.0-1": "04t37000000EYaSAAW"
+        "Workflow Schedule@1.2.0-1": "04t37000000EYaSAAW",
+        "Workflow Schedule@1.2.0-2": "04t37000000EYarAAG",
+        "Workflow Schedule@1.3.0-1": "04t37000000EYawAAG"
     }
 }
