Custom button actions

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -19,6 +19,7 @@
         "Workflow Schedule@1.1.0-1": "04t37000000EYWFAA4",
         "Workflow Schedule@1.2.0-1": "04t37000000EYaSAAW",
         "Workflow Schedule@1.2.0-2": "04t37000000EYarAAG",
-        "Workflow Schedule@1.3.0-1": "04t37000000EYawAAG"
+        "Workflow Schedule@1.3.0-1": "04t37000000EYawAAG",
+        "Workflow Schedule@1.4.0-1": "04t37000000kZd1AAE"
     }
 }
